fixed the flexbox gap between the links

--- a/public/css/cv02.css
+++ b/public/css/cv02.css
@@ -120,6 +120,7 @@ a:focus {
 
 .nav-bar ul li {
 	list-style: none;
+	margin: 1%;
 	padding: 2em 0;
 }
 
@@ -271,9 +272,13 @@ a:focus {
 	grid-area: contact-info;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	justify-content: flex-start;
 	align-items: left;
 	width: 100%;
+}
+
+.contact-info h3 {
+	margin: 0.6em 2% 0 2%;
 }
 
 .contact-info .email,
@@ -283,4 +288,5 @@ a:focus {
 
 .contact-info ul li {
 	white-space: nowrap;
+	margin: 0.6em 1%;
 }
